<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".activities.MoviesActivity">

    <item
        android:id="@+id/movies_settings_icon"
        android:title="@string/settings"
        android:icon="@drawable/ic_more_vert"
        app:showAsAction="always">
        <!--submenu-->
        <menu>
            <item
                android:id="@+id/movies_sort_by_most_popular"
                android:title="@string/sort_by_most_popular"/>
            <item
                android:id="@+id/movies_sort_by_highest_rated"
                android:title="@string/sort_by_highest_rated"/>
        </menu>

    </item>
</menu>