<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/fragment_detail_cover_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:contentDescription="@string/movie_image"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher"/>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/half_margin"
            card_view:cardCornerRadius="@dimen/card_corner_radius"
            card_view:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/half_margin"
                android:weightSum="10">

                <ImageView
                    android:id="@+id/fragment_detail_poster_image"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="4"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/movie_image"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/ic_launcher"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/half_margin">

                    <TextView
                        android:id="@+id/movie_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/small_title_text"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/movie_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:textSize="@dimen/large_body_text"/>

                    <TextView
                        android:id="@+id/movie_rating"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:textSize="@dimen/large_body_text"/>

                    <TextView
                        android:id="@+id/movie_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"/>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>


        <!--trailers-->

        <android.support.v7.widget.CardView
            android:id="@+id/fragment_detail_trailers_meta_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/half_margin"
            card_view:cardCornerRadius="@dimen/card_corner_radius"
            card_view:cardUseCompatPadding="true"
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/fragment_detail_trailers_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/half_margin">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/trailers"/>

                <!--trailers are loaded here at runtime-->

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <!--reviews-->

        <android.support.v7.widget.CardView
            android:id="@+id/fragment_detail_reviews_meta_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/half_margin"
            card_view:cardCornerRadius="@dimen/card_corner_radius"
            card_view:cardUseCompatPadding="true"
            android:visibility="gone">


            <LinearLayout
                android:id="@+id/fragment_detail_reviews_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/half_margin">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reviews"/>

                <!--reviews are loaded here at runtime-->

            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>
</ScrollView>